Istio/Examples/Gateways/ratings-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ratingsweb-gateway  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratingsweb-virtual-service  
spec:
  hosts:
  - "*"
  gateways:
  - ratingsweb-gateway
  http:
  - match:
    - uri:
        regex: /?(.*)  
    route:
    - destination:
        host: ratingsweb-service
        port:
          number: 80
